--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 jwt = "u3TtYfwq8cD4gEn9rGmQhWjYmZq4t7w9z$C&F)J@NcRfUjXn2r5u8x/A?D(G+Kb"
+mongocl =  "mongodb+srv://Readtolead:NIYbjyw9YNBI2nfk@cluster0.cwtzcv2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
